--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@mui/icons-material": "^5.2.4",
     "@mui/lab": "5.0.0-alpha.60",
     "@mui/material": "^5.2.4",
+    "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
     "card-validator": "^8.1.1",
     "formik": "^2.2.6",
